--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 	<head>
 		<title>CSS3 Playground</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		
+		<link rel="stylesheet" type="text/css" media="all" href="css3_playground.css" />
 
 	</head>
-	<body ngCloak>
-            <span>Hello World</span>		
+            <div id="color_change_div"></div>		
 	</body>
 </html>
