adding some basic animations

--- a/index.html
+++ b/index.html
@@ -6,6 +6,34 @@
 		<link rel="stylesheet" type="text/css" media="all" href="css3_playground.css" />
 
 	</head>
-            <div id="color_change_div"></div>		
+        <span class="scroll_text">Some scrolling text</span>
+            <table>
+                <tr>
+                    <td>
+                        <div id="color_change_div" class="demo_div">Change color</div>
+                    </td>
+                    <td>
+                       <div id="fade_in_div" class="demo_div">Fading in</div>
+                    </td>
+                    <td>
+                        <div id="fade_out_div" class="demo_div">Fading out</div>
+                    </td>
+                    <td>
+                        <div class="with_box_shadow demo_div">Box shadow</div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <div id="color_change_div_with_procent" class="demo_div">Change color</div>
+                    </td>
+                    <td>
+                        <span class="moving_around">Some moving text</span>
+                    </td>
+                    <td>
+                        
+                    </td>
+                </tr>
+            </table>
+            
 	</body>
 </html>
