some more basic animations

--- a/index.html
+++ b/index.html
@@ -10,27 +10,36 @@
             <table>
                 <tr>
                     <td>
-                        <div id="color_change_div" class="demo_div">Change color</div>
+                        <div id="color_change_div_with_procent" class="demo_div">Change color</div>
                     </td>
                     <td>
-                       <div id="fade_in_div" class="demo_div">Fading in</div>
+                       <div class="fade_in demo_div">Fading in</div>
                     </td>
                     <td>
-                        <div id="fade_out_div" class="demo_div">Fading out</div>
+                        <div  class="demo_div fade_out">Fading out</div>
                     </td>
                     <td>
                         <div class="with_box_shadow demo_div">Box shadow</div>
                     </td>
                 </tr>
                 <tr>
+                    
                     <td>
-                        <div id="color_change_div_with_procent" class="demo_div">Change color</div>
-                    </td>
-                    <td>
-                        <span class="moving_around">Some moving text</span>
+                        <span class="moving_around">Moving</span>
                     </td>
                     <td>
                         
+                    </td>
+
+                    <td>
+                    <td>
+                    <td>
+                        <span class="text_puff">Puff</span>    
+                    </td>
+                </tr>
+                <tr>
+                                        <td>
+                        <span class="change_font_size">Resize</span>    
                     </td>
                 </tr>
             </table>
