added border tab

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <li><a href="#basic_animations">Basic Animations</a></li>
                     <li><a href="#transition">Transition</a></li>
                     <li><a href="#3d">3D</a></li>
+                    <li><a href="#border">Border</a></li>
                 </ul>
                 <div id="basic_animations" style="width:800px; height:500px">
                     <span class="scroll_text">SCROLL</span>
@@ -34,9 +35,7 @@
                             <td>
                                 <div  class="demo_div fade_out">Fading out</div>
                             </td>
-                            <td>
-                                <div class="with_box_shadow demo_div">Shadow</div>
-                            </td>
+
                         </tr>
                         <tr>
 
@@ -46,15 +45,12 @@
                             <td>
 
                             </td>
-
-                            <td>
-                            <td>
                             <td>
                                 <span class="text_puff">Puff</span>    
                             </td>
                         </tr>
                         <tr>
-                                                <td>
+                            <td>
                                 <span class="change_font_size">Resize</span>    
                             </td>
                         </tr>
@@ -75,8 +71,12 @@
                             </td>
                             
                         </tr>
+                    </table>
                 </div>
                 <div id="3d" style="width:800px; height:500px">
+                </div>
+                <div id="border" style="width:800px; height:500px">
+                    <div class="with_box_shadow demo_div">Shadow</div>        
                 </div>
             </div>
             
