--- a/index.html
+++ b/index.html
@@ -10,7 +10,22 @@
                 <script>
                    $(function() {
                        $( "#tabs" ).tabs();
-                   });
+                       
+                       var counter = 1;
+                       $("#flip_with_click").on("click", function(){                 
+                            if(counter % 2===0){
+                                $(this).removeClass("click_card_back");
+                                $(this).addClass("click_card_front");
+                                $("#click_front").html("Click: " + (counter+1));
+                            }else{
+                                $(this).removeClass("click_card_front");
+                                $(this).addClass("click_card_back");
+                                $("#click_back").html("Click: " + (counter+1));
+                            }
+                            counter++;
+                            
+                       });
+                    });
                 </script>
 
 	</head>
@@ -74,6 +89,38 @@
                     </table>
                 </div>
                 <div id="3d" style="width:800px; height:500px">
+                    <table>
+                        <tr>
+                            <td>
+                                <div id="card_container">
+                                    <div id="card" class="demo_div">
+                                        <div class="front face">
+                                            <p>Press</p>
+                                        </div>
+                                        <div class="back face center">
+                                            <p>Back</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div id="flip_with_click" >
+                                    <div id="click_card_container">
+                                        <div id="click_card" class="demo_div">
+                                            <div class="front face" style="line-height:50px">
+                                                <p>Front<p>
+                                                <p id="click_front">Click: 1<p>
+                                            </div> 
+                                            <div class="back face center" style="line-height:50px">
+                                                <p>Back<p>
+                                                <p id="click_back">Click: 2<p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                    </table>
                 </div>
                 <div id="border" style="width:800px; height:500px">
                     <div class="with_box_shadow demo_div">Shadow</div>        
