starting to add arotae and fade effect

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                                         <div class="front face">
                                             <p>Press</p>
                                         </div>
-                                        <div class="back face center">
-                                            <p>Back</p>
+                                        <div class="back face">
+                                            <p>Release</p>
                                         </div>
                                     </div>
                                 </div>
@@ -111,9 +111,24 @@
                                                 <p>Front<p>
                                                 <p id="click_front">Click: 1<p>
                                             </div> 
-                                            <div class="back face center" style="line-height:50px">
+                                            <div class="back face" style="line-height:50px">
                                                 <p>Back<p>
                                                 <p id="click_back">Click: 2<p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div>
+                                    <div id="rotate_and_fade_container">
+                                        <div id="rotate_and_fade" >
+                                            <div id="div1" class="front face demo_div" style="line-height:50px" >
+                                                <p>Div 1<p>
+                                               
+                                            </div> 
+                                            <div id="div2" class="back face demo_div" style="line-height:50px" >
+                                                <p>Div 2<p>                             
                                             </div>
                                         </div>
                                     </div>
